--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 
 <head>
 
-<title>Título da página</title>
+<title>Aula Descomplica - Git</title>
 
-<meta charset=“utf-8”>
+<meta charset="utf-8">
 
 </head>
 
 <body>
 
-<h1>Aqui vai um título</h1>
+<h1>Primeiro commit da aula descomplica git</h1>
+
+<img src="C:\Users\Dayane\Desktop\PROJETO GITHUB\IMAGENS\cães-fazendo-home-office-1.webp" />
 
 </body>
 
