--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Primeiro commit da aula descomplica git</h1>
+<h1> Atividade Prática 10 - Trabalhando com GitHub </h1>
 
 <img src="C:\Users\Dayane\Desktop\PROJETO GITHUB\IMAGENS\cães-fazendo-home-office-1.webp" />
 
@@ -20,4 +20,4 @@
 
 </html>
 
-Copied!
+Dayane Prioste 
